--- a/_includes/index/who.html
+++ b/_includes/index/who.html
@@ -1,5 +1,6 @@
- <div class="section" id="who">
-  <h1>We're A Vivid Visual.</h1>
-  <h2>Let's visualize your ideas.</h2>
-  <a href="#" class="">Chat With Us.</a>
+<div class="who">
+  <h1>We're A Vivid Visual.<br>
+  Let's visualize your ideas.</h1>
+  <a href="#" class="button">Chat With Us</a>
+  <img src="/assets/img/bg-who.jpg" alt="We're A Vivid Visual. Let's visualize your ideas." class="background">
 </div>
