--- a/_includes/index/why.html
+++ b/_includes/index/why.html
@@ -1,5 +1,4 @@
-<div class="section">
-  <div id="why">
-    <h1>We believe that those with ideas <br> should be empowered.</h1>
-  </div>
+<div class="why">
+  <h1>We believe that those ideas <br> should be empowered.</h1>
+  <img src="/assets/img/bg-why.jpg" alt="We believe that those with ideas should be empowerd." class="background">
 </div>
