--- a/assets/css/3-sections/_navigation.sass
+++ b/assets/css/3-sections/_navigation.sass
@@ -1,13 +1,14 @@
 $nav-height: 40px
 nav
   display: block
-  width: 100%auto
+  min-width: 100%
   height: $nav-height
   z-index: 200
   background: #fff
   font-size: 14px
   line-height: $nav-height
   @extend .container
+  position: fixed
 
 .brand, .menu
   display: inline-block
