--- a/assets/css/3-sections/_sections.sass
+++ b/assets/css/3-sections/_sections.sass
@@ -4,7 +4,7 @@
   background: -moz-linear-gradient($brand-color, #59929e)
   background: linear-gradient($brand-color, #59929e)
 
-$section-height: 90vh
+$section-height: 100vh
 .section
   height: $section-height
   color: #fff
@@ -17,12 +17,11 @@ $section-height: 90vh
   position: relative
   overflow: hidden
   @extend .section
-  // padding-top: $section-height/2
   h1
     padding-top: $section-height/2.5
     position: relative
     z-index: 2
-  img
+  img.background
     position: absolute
     left: 0
     top: 0
@@ -30,14 +29,27 @@ $section-height: 90vh
     height: auto
     opacity: 0.15
 
+.what
+  h1
+    padding-top: $section-height/5
+    margin-bottom: 100px
+
 a.button
   z-index: 2
   position: relative
   margin: 30px 0
   display: inline-block
-  border: 2px solid #fff
+  border: 1px solid #fff
   border-radius: 5px
   color: #fff
   font-size: 1.4em
-  font-weight: lighter
+  font-weight: normal
   padding: 10px 60px
+  &:hover
+    background-color: $brand-color
+    border-color: $brand-color
+
+.logos
+  max-width: 920px
+  display: block
+  margin: 0 auto
