Corrected What copy

--- a/_includes/index/what.html
+++ b/_includes/index/what.html
@@ -1,6 +1,6 @@
 <div class="what">
-  <h1>We build MVPs, design identities <br> and build websites.</h1>
-  <img src="/assets/img/bg-what.jpg" alt="We build MVPs, design identities and build websites." class="background">
+  <h1>We build MVPs, design identities <br> and develop websites.</h1>
+  <img src="/assets/img/bg-what.jpg" alt="We build MVPs, design identities and develop websites." class="background">
 
   <div class="logos">
     {% for logo in site.data.settings.logos %}
