WIP for mobile viewing hide nav links, footer hide links, logos spacingg

--- a/assets/css/3-sections/_navigation.sass
+++ b/assets/css/3-sections/_navigation.sass
@@ -23,7 +23,10 @@ nav
     width: 220px
 
 .menu
-  float: right
-  text-transform: uppercase
-  a
-    margin-left: 20px
+  display: none
+  @media (min-width: 568px)
+    display: block      
+    float: right
+    text-transform: uppercase
+    a
+      margin-left: 20px
