--- a/assets/css/3-sections/_sections.sass
+++ b/assets/css/3-sections/_sections.sass
@@ -33,10 +33,13 @@ $section-height: 100vh
       width: 100%
 
 .what
+  height: 235vh
   h1
     padding-top: $section-height/5
     margin-bottom: 100px
-    height: 235vh
+  @media (min-width: 600px)
+    height: 100vh
+
 
 a.button
   z-index: 2
@@ -59,6 +62,10 @@ a.button
   margin: 0 auto
   position: relative
   z-index: 5
+
+img.logo
+  max-width: 300px
+  height: auto
 
 .logo:nth-child(2)
   margin-top: -50px
