--- a/assets/css/3-sections/_sections.sass
+++ b/assets/css/3-sections/_sections.sass
@@ -1,8 +1,5 @@
 .wrap
-  background: -webkit-linear-gradient($brand-color, #59929e)
-  background: -o-linear-gradient($brand-color, #59929e)
-  background: -moz-linear-gradient($brand-color, #59929e)
-  background: linear-gradient($brand-color, #59929e)
+  background: $font-color
 
 $section-height: 100vh
 .section
@@ -27,13 +24,14 @@ $section-height: 100vh
     left: 0
     width: auto
     height: 100%
-    opacity: 0.15
+    opacity: 0.5
 
 // WHY SECTION
 
 .why
   img.background
     left: -325px
+    opacity: 0.8
     @media (min-width: 568px)  // mobile landscape
       width: 100%
       height: auto
@@ -90,6 +88,7 @@ img.logo
     @media (min-width: 800px) // For tablet - landscape
       margin-top: 20%
   img.background
+    opacity: 0.3
     @media (min-width: 568px)  // mobile landscape
       width: 100%
       height: auto
