Optimized footer links, fixed up css

--- a/assets/css/3-sections/_footer.sass
+++ b/assets/css/3-sections/_footer.sass
@@ -3,6 +3,7 @@ footer
   line-height: 1em
   padding: 20px
   height: 180px
+  color: $font-color
   p, li
     margin: 10px 0
     font-size: 14px
@@ -18,7 +19,7 @@ strong
   height: 14px
   display: inline-block
   text-align: center
-  margin-right: 10px
+  margin-right: 5px
 
 .contact
   display: block
@@ -33,7 +34,7 @@ strong
     display: block
     li
       list-style: none
-      text-transform: uppercase
+      text-transform: capitalize
 
 .social
   display: block
@@ -42,7 +43,7 @@ strong
     font-size: 1.5em
     margin: 10px 5%
   .copy
-    font-size: 0.5em
+    font-size: 0.8em
 
 @media (min-width: 800px)
   .contact, .links, .social
