--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,10 +11,9 @@
 
 	<div class="links">
 		<ul>
-			<li><a href="">Work</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Contact</a></li>
-			<li><a href="#">Journal</a></li>
+			{% for link in site.data.settings.menu %}
+				<li><a href="{{ link.url }}">{{ link.name }}</a></li>
+			{% endfor %}
 		</ul>
 	</div>
 
