--- a/assets/css/3-sections/_navigation.sass
+++ b/assets/css/3-sections/_navigation.sass
@@ -18,6 +18,7 @@ nav
   width: 72px
   height: 21px
   margin-top: 10px
+  margin-left: -20px
   @media (min-width: 600px)
     background: url('../img/logo-avv-full.gif') no-repeat
     width: 220px
@@ -25,7 +26,7 @@ nav
 .menu
   display: none
   @media (min-width: 568px)
-    display: block      
+    display: block
     float: right
     text-transform: uppercase
     a
