--- a/_includes/index/who.html
+++ b/_includes/index/who.html
@@ -1,6 +1,8 @@
 <div class="who">
-  <h1>We're A Vivid Visual.<br>
-  Let's visualize your ideas.</h1>
-  <a href="https://avividvisual.typeform.com/to/YCjUVG" class="button" target="_blank">Chat With Us</a>
-  <img src="/assets/img/bg-who.jpg" alt="We're A Vivid Visual. Let's visualize your ideas." class="background">
+  <div class="container">
+    <h1>We're A Vivid Visual.<br>
+    Let's visualize your ideas.</h1>
+    <a href="https://avividvisual.typeform.com/to/YCjUVG" class="button" target="_blank">Chat With Us</a>
+    <img src="/assets/img/bg-who.jpg" alt="We're A Vivid Visual. Let's visualize your ideas." class="background">
+  </div>
 </div>
