--- a/assets/css/3-sections/_sections.sass
+++ b/assets/css/3-sections/_sections.sass
@@ -3,7 +3,7 @@
 
 $section-height: 100vh
 .section
-  height: $section-height
+  min-height: $section-height
   color: #fff
   width: 100%
   margin: 0px
