Added menu bars, stashed away for a later time when all the pages are set up

--- a/_includes/index/who.html
+++ b/_includes/index/who.html
@@ -2,7 +2,9 @@
   <div class="container">
     <h1>We're A Vivid Visual.<br>
     Let's visualize your ideas.</h1>
-    <a href="https://avividvisual.typeform.com/to/YCjUVG" class="button" target="_blank">Chat With Us</a>
+    <a class="typeform-share avv-button" href="https://avividvisual.typeform.com/to/YCjUVG" data-mode="2" target="_blank">Hire Us</a>
+    <br>
+    <span>Or simply drop us a <a href="mailto:hello@avividvisual.com" class="hello">'hello!'</a></span>
     <img src="/assets/img/bg-who.jpg" alt="We're A Vivid Visual. Let's visualize your ideas." class="background">
   </div>
 </div>
