--- a/_includes/index/why.html
+++ b/_includes/index/why.html
@@ -1,6 +1,6 @@
 <div class="why">
   <div class="container">
-    <h1>We believe that those with ideas <br> should be empowered.</h1>
+    <h1>We believe your ideas <br> should be empowered.</h1>
     <img src="/assets/img/bg-why.jpg" alt="We believe that those with ideas should be empowerd." class="background">
   </div>
 </div>
