--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,14 +1,14 @@
 <nav>
-	<div class="nav-wrap">
+	<div class="container">
 		<div class="brand">
 		</div>
+		<div class="toggle">
+			<a href="#">☰</a>
+		</div>
 		<div class="menu">
-	    <a href="#">Work</a>
-	    <a href="#">About</a>
-	    <a href="#">Journal</a>
-	    <a href="#">Contact</a>
-			<!-- <a href="#"><i class="fa fa-envelope"></i></a>
-			<a href="#"><i class="fa fa-bars"></i></a> -->
+			{% for link in site.data.settings.menu %}
+				<a href="{{ link.url }}">{{ link.name }}</a></li>
+			{% endfor %}
 		</div>
 	</div>
 </nav>
