--- a/assets/css/3-sections/_footer.sass
+++ b/assets/css/3-sections/_footer.sass
@@ -28,13 +28,14 @@ strong
     display: block
     text-align: center
 
+// Footer links are temporarily hidden until other pages are created
 .links
   display: none
-  @media (min-width: 800px)
-    display: block
-    li
-      list-style: none
-      text-transform: capitalize
+  // @media (min-width: 800px)
+  //   display: block
+  //   li
+  //     list-style: none
+  //     text-transform: capitalize
 
 .social
   display: block
