--- a/_includes/index/what.html
+++ b/_includes/index/what.html
@@ -1,4 +1,4 @@
-<div class="what">
+<div class="what" id="#what">
   <div class="container">
     <h1>We build MVPs, design identities <br> and develop websites.</h1>
     <img src="/assets/img/bg-what.jpg" alt="We build MVPs, design identities and develop websites." class="background">
