--- a/assets/css/3-sections/_navigation.sass
+++ b/assets/css/3-sections/_navigation.sass
@@ -23,18 +23,42 @@ nav
     background: url('../img/logo-avv-full.gif') no-repeat
     width: 220px
 
+
+.nav-menu
+  display: inline-block
+  font-size: 1em
+  color: $font-color
+  float: right
+  i
+    margin-left: 10px
+    font-size: 1.5em
+    @media (min-width: 1024px)
+      display: none
+  span
+    display: none
+    @media (min-width: 1024px)
+      display: inline
+      padding-right: 10px
+      margin-left: 10px
+      border-right: 1px solid lighten($font-color, 20%)
+
+span.tel
+  border: 0px
+
 .menu
   display: none
-  @media (min-width: 568px)
-    display: inline-block
-    float: right
-    text-transform: uppercase
-    a
-      margin-left: 20px
-
+// Menu is temporarily hidden until the other pages are created
+//   @media (min-width: 568px)
+//     display: inline-block
+//     float: right
+//     text-transform: uppercase
+//     a
+//       margin-left: 20px
+//
 .toggle
-  display: inline-block
-  float: right
-  font-size: 2em
-  @media (min-width: 568px)
-    display: none
+  display: none
+//   display: inline-block
+//   float: right
+//   font-size: 2em
+//   @media (min-width: 568px)
+//     display: none
