--- a/assets/css/3-sections/_sections.sass
+++ b/assets/css/3-sections/_sections.sass
@@ -27,7 +27,6 @@ $section-height: 100vh
     opacity: 0.5
 
 // WHY SECTION
-
 .why
   img.background
     left: -325px
@@ -45,9 +44,12 @@ $section-height: 100vh
       height: auto
       left: -10%
 
+i.chevron
+  font-size: 3em
+  margin-top: 10px
+
+
 // WHAT SECTION
-
-
 .what
   height: auto
   padding-bottom: 100px
@@ -75,7 +77,6 @@ img.logo
 
 
 // WHO SECTION
-
 .who
   h1
     padding-top: 0
