--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,11 +18,11 @@
 	</div>
 
 	<div class="social">
-		<a href="" class="twitter"><i class="fa fa-twitter"></i></a>
-		<a href="" class="facebook"><i class="fa fa-facebook"></i></a>
-		<a href="" class="pinterest"><i class="fa fa-pinterest"></i></a>
-		<a href="" class="github"><i class="fa fa-github"></i></a>
-		<a href="" class="behance"><i class="fa fa-behance"></i></a>
+		<a href="http://www.twitter.com/avividvisual/" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
+		<a href="http://www.facebook.com/avividvisual/" target="_blank" class="facebook"><i class="fa fa-facebook"></i></a>
+		<a href="http://www.pinterest.com/avividvisual/" target="_blank" class="pinterest"><i class="fa fa-pinterest"></i></a>
+		<a href="http://www.github.com/avividvisual/" target="_blank" class="github"><i class="fa fa-github"></i></a>
+		<a href="http://www.behance.net/avividvisual/" target="_blank" class="behance"><i class="fa fa-behance"></i></a>
 		<p class="copy">© {{ site.time | date: '%Y'}} A Vivid Visual. All Rights Reserved</p>
 	</div>
 </footer>
