--- a/_includes/index/why.html
+++ b/_includes/index/why.html
@@ -2,6 +2,6 @@
   <div class="container">
     <h1>We believe your ideas <br> should be empowered.</h1>
     <i class="fa fa-angle-down chevron"></i>
-    <img src="/assets/img/bg-why.jpg" alt="We believe that those with ideas should be empowerd." class="background">
+    <img src="/assets/img/bg-why.jpg" style="background-size: cover" alt="We believe that those with ideas should be empowerd." class="background">
   </div>
 </div>
