--- a/assets/css/3-sections/_sections.sass
+++ b/assets/css/3-sections/_sections.sass
@@ -19,30 +19,18 @@ $section-height: 100vh
     position: relative
     z-index: 2
   img.background
+    display: none
     position: absolute
     top: 0
     left: 0
-    width: auto
-    height: 100%
+    background-size: cover
     opacity: 0.5
 
 // WHY SECTION
 .why
-  img.background
-    left: -325px
-    opacity: 0.8
-    @media (min-width: 568px)  // mobile landscape
-      width: 100%
-      height: auto
-      left: 0
-    @media (min-width: 768px) // tablet portrait
-      width: auto
-      height: 100%
-      left: -60%
-    @media (min-width: 1024px) // tablet landscape
-      width: 120%
-      height: auto
-      left: -10%
+  background: url('../img/bg-why.jpg')
+  background-size: cover
+  background-position: top center
 
 i.chevron
   font-size: 3em
@@ -51,15 +39,13 @@ i.chevron
 
 // WHAT SECTION
 .what
-  height: auto
-  padding-bottom: 100px
+  background: url('../img/bg-what.jpg')
+  background-size: cover
+  background-position: top center
+
   h1
     padding-top: 100px
     margin-bottom: 50px
-  img.background
-    @media(min-width: 1024px)
-      width: 100%
-      height: auto
 
 .logos
   max-width: 920px
@@ -78,6 +64,9 @@ img.logo
 
 // WHO SECTION
 .who
+  background: url('../img/bg-who.jpg')
+  background-size: cover
+  background-position: top center
   h1
     padding-top: 0
     margin-top: 50% // For mobile (portrait)
@@ -87,17 +76,7 @@ img.logo
       margin-top: 50%
     @media (min-width: 800px) // For tablet - landscape
       margin-top: 20%
-  img.background
-    opacity: 0.3
-    @media (min-width: 568px)  // mobile landscape
-      width: 100%
-      height: auto
-    @media (min-width: 768px) // tablet portrait
-      width: auto
-      height: 100%
-    @media (min-width: 1024px)
-      width: 120%
-      height: auto
+
   span
     position: relative
     z-index: 2
@@ -114,12 +93,13 @@ a.avv-button
   position: relative
   margin: 30px 0
   display: inline-block
-  border: 1px solid #fff
+  border: 2px solid #fff
   border-radius: 5px
   color: #fff
   font-size: 1.4em
   font-weight: normal
   padding: 10px 60px
+  background-color: rgba(187,122,147, 0.3)
   &:hover
     background-color: $brand-color
     border-color: $brand-color
