--- a/app/assets/css/2-base/_navigation.sass
+++ b/app/assets/css/2-base/_navigation.sass
@@ -1,37 +1,38 @@
 .nav
   width: 100%
   height: 60px
-  padding: 0 30px
-  text-transform: uppercase
   line-height: 60px
   position: absolute
-  .ion
-    margin-right: 5px
+  padding: 0 30px
+  a
+    display: inline-block
+    height: 60px
+    min-width: 44px
 
 .navicon
+  font-size: 3.5em
   @media (min-width: 800px)
     display: none
 
-.brand::before
-  content: 'AVV'
-  @media (min-width: 800px)
-    content: 'A Vivid Visual'
-
-.brand
-  font-size: 1.2em
-  font-weight: 600
-
-.links
+.menu
   display: none
+  border: 1px solid white
+  background: transparentize(#000, 0.1)
+  text-align: center
+  position: absolute
+  width: 100%
+  height: 100vh
+  top: 0px
+  left: 0px
+  z-index: 40
   a
     display: block
-  @media (min-width: 800px)
-    display: inline
-    margin-left: 20px
-    a
-      display: inline
-      margin: 0 20px
 
-.chat
-  display: inline
-  float: right
+.naviclose
+  height: 60px
+  display: block
+  float: left
+  margin-left: 30px
+  i
+    font-size: 2.5em
+    vertical-align: middle
