--- a/app/assets/css/4-pages/_home.sass
+++ b/app/assets/css/4-pages/_home.sass
@@ -1,5 +1,5 @@
 .home
-  background: url('/assets/img/landing-bg.jpg') no-repeat
+  background: url('../img/landing-bg.jpg') no-repeat
   background-size: cover
   background-position: center
   min-height: 100vh
