--- a/app/assets/css/4-pages/_work.sass
+++ b/app/assets/css/4-pages/_work.sass
@@ -1,6 +1,6 @@
 .work
   @extend .home
-  background: url('/assets/img/work-bg.jpg') no-repeat
+  background: url('../img/work-bg.jpg') no-repeat
   background-size: cover
   background-position: center
   min-height: 100vh
