--- a/app/views/pages/work.html
+++ b/app/views/pages/work.html
@@ -1,14 +1,12 @@
-<!-- <p ng-repeat="work in works">
-  {{ work.name }}, {{ work.tags }}
-</p> -->
 
-<div ng-repeat="work in works" class="" style="border: 1px solid red; display: block">
+<div ng-repeat="work in works" class="card">
   <!-- img -->
-  <div class="thumbnail">
-    <img ng-src="{{ work.thumbnail }}" alt="{{ work.name }}">
-    <img ng-src="{{ work.logo }}" alt="{{ work.name }}">
+  <div class="thumbnail" style="background: url({{ work.thumbnail }})">
+    <img ng-src="{{ work.logo }}" alt="{{ work.name }}" class="logo">
   </div>
   <!-- content -->
-  <p><strong>{{ work.name }}</strong> // <span ng-repeat="tag in work.tags">{{ tag }}, </span></p>
+  <p><strong>{{ work.name }}</strong> //
+    <span ng-repeat="tag in work.tags">{{ tag }} {{$last ? '' : ', '}} </span>
+  </p>
   <p>{{ work.description }}</p>
 </div>
